implement domain service